Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/BadExpressionLambda.out
BadExpressionLambda.java:19:31: compiler.err.prob.found.req: (compiler.misc.incompatible.ret.type.in.lambda: (compiler.misc.conditional.target.cant.be.void))
1 error
